--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,7 @@
   ],
   "dependencies": {
     "jquery": ">=1.7.0",
-    "bsp-utils": ">=1.0.0",
-    "waypoints": "3.1.1",
-    "history.js": "1.8.0"
+    "bsp-utils": ">=1.0.0"
   },
   "devDependencies": {},
   "homepage": "https://github.com/perfectsense/brightspot-js-toggle-item",
