moar bower.json

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,10 @@
   "license": "MIT",
   "main": [
     "dist/bsp-infinite-content.js",
-    "dist/bsp-infinite-content-plugin.js"
+    "dist/bsp-infinite-content-plugin.js",
+    "dist/history.js/native.history.js",
+    "dist/waypoints/infinite.js",
+    "dist/waypoints/jquery.waypoints.js"
   ],
   "name": "bsp-infinite-content",
   "version": "0.0.1"
